# plato

./: .gitignore  AGENTS.md  Cargo.toml  README.md  config.example.toml  justfile  opencode.json  plato.base.example.toml  plato.python.example.toml  plato.rust.example.toml
crates/plato/: Cargo.toml
crates/plato-plugin-api/: Cargo.toml
crates/plato-plugin-api/src/: lib.rs
crates/plato-plugin-support/: Cargo.toml
crates/plato-plugin-support/src/: command.rs  lib.rs
crates/plato/src/: context.rs  guard.rs  lib.rs  names.rs  util.rs
crates/plato/src/cli/: args.rs  handlers.rs  mod.rs
crates/plato/src/config/: global.rs  group.rs  mod.rs  template.rs  tests.rs
crates/plato/src/plugins/: command.rs  discovery.rs  id.rs  install.rs  mod.rs  paths.rs  registry.rs
crates/plato/src/rendering/: environment.rs
crates/plato/src/rendering/filters/: mod.rs
crates/plato/src/setup/: mod.rs  plan.rs  runner.rs  step.rs
crates/plato/src/source/: mod.rs  resolver.rs  selection.rs
crates/plato/src/source/git/: cache.rs  fetcher.rs  mod.rs  spec.rs
crates/plato/src/workspace/: builder.rs  mod.rs  path_exclude.rs  path_rewrite.rs  rendered.rs
crates/plato/tests/: init_cleanup.rs  plugin_timeout.rs  validation.rs
crates/plato/tests/support/: fail_plugin.rs  sleep_plugin.rs  temp.rs
docs/: configuration.md  plugins.md
docs/examples/: ansible-git.toml  fullstack-uv-pnpm-git.toml  precommit.toml  python-pip.toml  python-uv.toml  rust-cargo.toml
plugins/plato-plugin-cargo/: Cargo.toml
plugins/plato-plugin-cargo/src/: config.rs  main.rs  setup.rs
plugins/plato-plugin-git/: Cargo.toml
plugins/plato-plugin-git/src/: config.rs  main.rs  setup.rs
plugins/plato-plugin-pip/: Cargo.toml
plugins/plato-plugin-pip/src/: config.rs  main.rs  pyproject.rs  setup.rs
plugins/plato-plugin-pnpm/: Cargo.toml
plugins/plato-plugin-pnpm/src/: main.rs
plugins/plato-plugin-precommit/: Cargo.toml
plugins/plato-plugin-precommit/src/: main.rs
plugins/plato-plugin-uv/: Cargo.toml
plugins/plato-plugin-uv/src/: config.rs  main.rs  pyproject.rs  setup.rs
src/: context.rs  lib.rs  main.rs  names.rs  util.rs
src/cli/: args.rs  dispatch.rs  mapping.rs  mod.rs  scan.rs
src/config/: global.rs  group.rs  mod.rs  template.rs  tests.rs
src/core/: config.rs  config_tests.rs  git.rs  guard.rs  mod.rs  path.rs  registry.rs  template_source.rs
src/git/: fetcher.rs  mod.rs  setup.rs
src/languages/: mod.rs  python.rs
src/languages/python/: install.rs  mod.rs  pip.rs  shared.rs  uv.rs
src/languages/python/project/: metadata.rs  mod.rs  plan.rs  validation.rs
src/languages/rust/: cargo.rs  mod.rs  shared.rs
src/languages/rust/project/: metadata.rs  mod.rs  plan.rs
src/rendering/: environment.rs  mod.rs
src/rendering/filters/: regex.rs
src/templates/: mod.rs  registry.rs  resolver.rs  selection.rs
src/validation/: files.rs  mod.rs  project.rs  report.rs
src/workspace/: builder.rs  content.rs  mod.rs  path_rewrite.rs  rendered.rs  setup.rs
