[package]
name = "plato"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plato"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
directories = "6.0.0"
fs_extra = "1.3.0"
home = "0.5.12"
minijinja = "2.19.0"
regex = "1.12.3"
serde = { version = "1.0.228", features = ["derive"] }
shell-words = "1.1.1"
toml = "1.1.2"
walkdir = "2.5.0"
