[workspace]
resolver = "3"
members = [
  "crates/plato",
  "crates/plato-plugin-api",
  "crates/plato-plugin-support",
  "plugins/plato-plugin-git",
  "plugins/plato-plugin-uv",
  "plugins/plato-plugin-pip",
  "plugins/plato-plugin-pnpm",
  "plugins/plato-plugin-cargo",
  "plugins/plato-plugin-precommit",
]

[workspace.package]
edition = "2024"
license = "MIT"
repository = "https://github.com/alxknt/plato"

[workspace.dependencies]
anyhow = "1.0.102"
clap = { version = "4.6.1", features = ["derive"] }
directories = "6.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
toml = "1.1.2"
