[package]
name = "plato"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "plato"
path = "src/main.rs"

[dependencies]
plato-plugin-api = { path = "../plato-plugin-api" }
anyhow.workspace = true
blake3 = "1.8.5"
clap.workspace = true
directories.workspace = true
fs2 = "0.4.3"
fs_extra = "1.3.0"
home = "0.5.12"
minijinja = "2.20.0"
regex = "1.12.3"
serde.workspace = true
serde_json.workspace = true
shell-words = "1.1.1"
toml.workspace = true
walkdir = "2.5.0"
